# nano-claude-code

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README-zh.md  README.md
.github/workflows/: python-ci.yml
docs/plans/: 2026-03-17-nano-claude-code-design.md  architecture.md  multi-language-guide.md  version-roadmap.md
docs/zh/: learning-path.md
implementations/python/: pyproject.toml  requirements.txt
implementations/python/sessions/: README.md  v01_session.py  v02_session.py  v03_session.py
implementations/python/v01_minimal_loop/: README.md
implementations/python/v01_minimal_loop/src/: __init__.py  agent.py  bash_tool.py  main.py
implementations/python/v01_minimal_loop/tests/: conftest.py  test_agent.py  test_bash_tool.py
implementations/python/v02_tool_system/: README.md
implementations/python/v02_tool_system/src/: __init__.py  agent.py  dispatcher.py  file_tools.py  main.py  sandbox.py
implementations/python/v02_tool_system/tests/: conftest.py  test_dispatcher.py  test_file_tools.py  test_sandbox.py
implementations/python/v03_task_planning/src/: __init__.py  agent.py  main.py  todo_manager.py  todo_tool.py
implementations/python/v03_task_planning/tests/: conftest.py  test_todo_manager.py  test_todo_tool.py
